--- a/alyssa.html
+++ b/alyssa.html
@@ -1,12 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<title>Cirriculum Vitae</title >
+    <style>
+        body {
+          font-family: sans-serif;
+        }
+        .container {
+          display: flex;
+          justify-content: space-around;
+        }
+        .section {
+          width: 45%;
+          padding: 20px;
+        }
+        .profile-picture {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          height: 150px;
+          margin-bottom: 20px;
+        }
+        .profile-picture img {
+          max-width: 100%;
+          max-height: 100%;
+        }
+        </style>
 </head>
 <body>
-    <h1>hello arlyn
-    </h1>
+
+<div class="container">
+  <div class="section">
+    <div class="profile-picture">
+        <img src="IMG_20240524_211314_044.jpg" alt="Profile Picture">
+    </div>
+    <h3>Alyssa Mae Carreon Rodriguez  </h3>
+    <h4>Basic Information</h4>
+    <p>Age: 19 years old </p>
+    <p>Phone: 09129626243</p>
+    <p>Email: rodriguezalyssamae3@gmailcom</p>
+    <p>Address: Upper Langcangan, Oroquieta City </p>
+    <p>Language: English, Tagalog and Bisaya</p>
+    <h4>Education</h4>
+    <p>Elementary: Layawan Elementary School </p>
+    <p>High School: Misamis Occidental National High School</p>
+    <p>College: University of Science and Technology of Southern Phillipines</p>
+    <h4>Skills</h4>
+    <p>-</p>
+    <h4>Work Experience</h4>
+    <p>-</p>
+  </div>
+
 </body>
 </html>
