change picture(not final)

--- a/alyssa.html
+++ b/alyssa.html
@@ -34,7 +34,7 @@
 <div class="container">
   <div class="section">
     <div class="profile-picture">
-        <img src="IMG_20240524_211314_044.jpg" alt="Profile Picture">
+        <img src="pngtree-cat-wearing-suit-funny-animal-illustration-png-image_15068363.png" alt="Profile Picture">
     </div>
     <h3>Alyssa Mae Carreon Rodriguez  </h3>
     <h4>Basic Information</h4>
