updating the cv

--- a/alyssa.html
+++ b/alyssa.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 <title>Cirriculum Vitae</title >
     <style>
         body {
@@ -52,6 +53,30 @@
     <h4>Work Experience</h4>
     <p>-</p>
   </div>
+</div> 
+
+  <div class="container">
+    <div class="section">
+      <div class="profile-picture">
+          <img src="pngtree-cat-wearing-suit-funny-animal-illustration-png-image_15068363.png" alt="Profile Picture">
+      </div>
+      <h3>Arlyn Kaye Allona Baluyos  </h3>
+      <h4>Basic Information:</h4>
+      <p>Age: 20 years old </p>
+      <p>Phone: 09100073128</p>
+      <p>Email: arlynbaluyos33@gmailcom</p>
+      <p>Address: Mansabay Alto, Lopez Jaena </p>
+      <p>Language: English, Tagalog and Bisaya</p>
+      <h4>Education</h4>
+      <p>Elementary: estacas Integrated School </p>
+      <p>High School: Misamis Occidental National High School</p>
+      <p>College: University of Science and Technology of Southern Phillipines</p>
+      <h4>Skills</h4>
+      <p>-</p>
+      <h4>Work Experience</h4>
+      <p>-</p>
+    </div>
+    
 
 </body>
 </html>
