updating the cv

--- a/alyssa.html
+++ b/alyssa.html
@@ -70,7 +70,7 @@
       <h4>Education</h4>
       <p>Elementary: estacas Integrated School </p>
       <p>High School: Misamis Occidental National High School</p>
-      <p>College: University of Science and Technology of Southern Phillipines</p>
+      <p>College: University of Science and Technology of Southern Phillipiness</p>
       <h4>Skills</h4>
       <p>-</p>
       <h4>Work Experience</h4>
