--- a/index.html
+++ b/index.html
@@ -1,82 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-<title>Cirriculum Vitae</title >
-    <style>
-        body {
-          font-family: sans-serif;
-        }
-        .container {
-          display: flex;
-          justify-content: space-around;
-        }
-        .section {
-          width: 45%;
-          padding: 20px;
-        }
-        .profile-picture {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          height: 150px;
-          margin-bottom: 20px;
-        }
-        .profile-picture img {
-          max-width: 100%;
-          max-height: 100%;
-        }
-        </style>
+    <title>Curriculum Vitae</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="stylesheet.css"> <!-- Link to your external CSS file -->
 </head>
 <body>
 
-<div class="container">
-  <div class="section">
-    <div class="profile-picture">
-        <img src="pngtree-cat-wearing-suit-funny-animal-illustration-png-image_15068363.png" alt="Profile Picture">
+<div class="container mt-5">
+    <h1 class="text-center mb-4">CURRICULUM VITAE</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card profile-card">
+                <div class="profile-picture">
+                    <img src="IMG_20241210_141546_800@373425068.jpg" alt="Profile Picture">
+                </div>
+                <div class="card-body">
+                    <h4>Alyssa Mae C. Rodriguez</h4>
+                    <h3>Basic Information</h3>
+                    <p>Phone: 09129626243</p>
+                    <p>Email: rodriguezalyssamae3@gmail.com</p>
+                    <p>Address: Upper Langcangan, Oroquieta City</p>
+                    <h3>Education</h3>
+                    <p>Elementary: Layawan Elementary School</p>
+                    <p>High School: Misamis Occidental National High School</p>
+                    <p>College: University of Scienceand Technology of Southern Philippines</p>
+                    <h3>Skills</h3>
+                    <p>HTML, CSS</p>
+                    <h3>Work Experience</h3>
+                    <p>Special Program for Employment of Students (SPES)</p>
+                </div>
+            </div>
+        </div>
     </div>
-    <h3>Alyssa Mae Carreon Rodriguez  </h3>
-    <h4>Basic Information</h4>
-    <p>Age: 19 years old </p>
-    <p>Phone: 09129626243</p>
-    <p>Email: rodriguezalyssamae3@gmailcom</p>
-    <p>Address: Upper Langcangan, Oroquieta City </p>
-    <p>Language: English, Tagalog and Bisaya</p>
-    <h4>Education</h4>
-    <p>Elementary: Layawan Elementary School </p>
-    <p>High School: Misamis Occidental National High School</p>
-    <p>College: University of Science and Technology of Southern Phillipines</p>
-    <h4>Skills</h4>
-    <p>-</p>
-    <h4>Work Experience</h4>
-    <p>-</p>
-  </div>
-</div> 
+</div>
 
-  <div class="container">
-    <div class="section">
-      <div class="profile-picture">
-          <img src="pngtree-cat-wearing-suit-funny-animal-illustration-png-image_15068363.png" alt="Profile Picture">
-      </div>
-      <h3>Arlyn Kaye Allona Baluyos  </h3>
-      <h4>Basic Information:</h4>
-      <p>Age: 20 years old </p>
-      <p>Phone: 09100073128</p>
-      <p>Email: arlynbaluyos33@gmailcom</p>
-      <p>Address: Mansabay Alto, Lopez Jaena </p>
-      <p>Language: English, Tagalog and Bisaya</p>
-      <h4>Education</h4>
-      <p>Elementary: estacas Integrated School </p>
-      <p>High School: Misamis Occidental National High School</p>
-      <p>College: University of Science and Technology of Southern Phillipiness</p>
-      <h4>Skills</h4>
-      <p>-</p>
-      <h4>Work Experience</h4>
-      <p>-</p>
-    </div>
-    
-
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
