--- a/index.html
+++ b/index.html
@@ -34,6 +34,30 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-6">
+            <div class="card profile-card">
+                <div class="profile-picture">
+                    <img src="7711c34a-0c45-4a13-902a-ed76e6d54c10.jpg" alt="Profile Picture">
+                </div>
+                <div class="card-body">
+                    <h5>Arlyn Kaye Allona D. Baluyos</h5>
+                    <h3>Basic Information</h3>
+                    <p>Age: 20</p>
+                    <p>Phone: 09302903570</p>
+                    <p>Email: arlynbaluyos33@gmail.com</p>
+                    <p>Address: Mansabay Alto, Lopez Jaena</p>
+                    <p>Language: English, Tagalog, Bisaya</p>
+                    <h3>Education</h3>
+                    <p>Elementary: Estaca Integrated School</p>
+                    <p>High School: Misamis Occidental National High School</p>
+                    <p>College: University of Science and Technology of Southern Philippines</p>
+                    <h3>Skills</h3>
+                    <p>HTML, CSS</p>
+                    <h3>Work Experience</h3>
+                    <p>Computer System Servicing NCII</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
