--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="stylesheet.css"> <!-- Link to your external CSS file -->
+    <link rel="stylesheet" href="stylesheet.css"> 
 </head>
 <body>
 
@@ -15,7 +15,7 @@
         <div class="col-md-6">
             <div class="card profile-card">
                 <div class="profile-picture">
-                    <img src="IMG_20241210_141546_800@373425068.jpg" alt="Profile Picture">
+                    <img src="Alyssa.jpg" alt="Profile Picture">
                 </div>
                 <div class="card-body">
                     <h4>Alyssa Mae C. Rodriguez</h4>
