--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
                     <img src="Alyssa.jpg" alt="Profile Picture">
                 </div>
                 <div class="card-body">
-                    <h4>Alyssa Mae C. Rodriguez</h4>
-                    <h3>About Me</h3>
-                    <p>I'm a 2nd year student at University of Science and Technology of Southern Philippines pursuing a degree in Information Technology.</p>
-                    <h3>Basic Information</h3>
+                    <h4><em>Alyssa Mae C. Rodriguez</em></h4>
+
+                    <h3><b>About Me</b></h3>
+                    <p>I am a motivated college student at University of Science and Technology of Southern Philippines currently pursuing a degree Information Technology with a growing passion for coding. Although I am relatively new to programming. I am a quick learner, highly curious, and always excited to take on new challenges.
+                      My goal is to develop my skills further, contribute to innovative projects, and eventually build a career in the tech industry.</p>
+
+                    <h3><b>Basic Information</b></h3>
                     <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cake2-fill" viewBox="0 0 16 16">
                         <path d="m2.899.804.595-.792.598.79A.747.747 0 0 1 4 1.806v4.886q-.532-.09-1-.201V1.813a.747.747 0 0 1-.1-1.01ZM13 1.806v4.685a15 15 0 0 1-1 .201v-4.88a.747.747 0 0 1-.1-1.007l.595-.792.598.79A.746.746 0 0 1 13 1.806m-3 0a.746.746 0 0 0 .092-1.004l-.598-.79-.595.792A.747.747 0 0 0 9 1.813v5.17q.512-.02 1-.055zm-3 0v5.176q-.512-.018-1-.054V1.813a.747.747 0 0 1-.1-1.01l.595-.79.598.789A.747.747 0 0 1 7 1.806"/>
                         <path d="M4.5 6.988V4.226a23 23 0 0 1 1-.114V7.16c0 .131.101.24.232.25l.231.017q.498.037 1.02.055l.258.01a.25.25 0 0 0 .26-.25V4.003a29 29 0 0 1 1 0V7.24a.25.25 0 0 0 .258.25l.259-.009q.52-.018 1.019-.055l.231-.017a.25.25 0 0 0 .232-.25V4.112q.518.047 1 .114v2.762a.25.25 0 0 0 .292.246l.291-.049q.547-.091 1.033-.208l.192-.046a.25.25 0 0 0 .192-.243V4.621c.672.184 1.251.409 1.677.678.415.261.823.655.823 1.2V13.5c0 .546-.408.94-.823 1.201-.44.278-1.043.51-1.745.696-1.41.376-3.33.603-5.432.603s-4.022-.227-5.432-.603c-.702-.187-1.305-.418-1.745-.696C.408 14.44 0 14.046 0 13.5v-7c0-.546.408-.94.823-1.201.426-.269 1.005-.494 1.677-.678v2.067c0 .116.08.216.192.243l.192.046q.486.116 1.033.208l.292.05a.25.25 0 0 0 .291-.247M1 8.82v1.659a1.935 1.935 0 0 0 2.298.43.935.935 0 0 1 1.08.175l.348.349a2 2 0 0 0 2.615.185l.059-.044a1 1 0 0 1 1.2 0l.06.044a2 2 0 0 0 2.613-.185l.348-.348a.94.94 0 0 1 1.082-.175c.781.39 1.718.208 2.297-.426V8.833l-.68.907a.94.94 0 0 1-1.17.276 1.94 1.94 0 0 0-2.236.363l-.348.348a1 1 0 0 1-1.307.092l-.06-.044a2 2 0 0 0-2.399 0l-.06.044a1 1 0 0 1-1.306-.092l-.35-.35a1.935 1.935 0 0 0-2.233-.362.935.935 0 0 1-1.168-.277z"/>
@@ -40,13 +43,19 @@
                         <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm7.138 9.995q.289.451.63.846c-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6 6 0 0 1-.415-.492 2 2 0 0 1-.94.31"/>
                       </svg> English, Tagalog, and Bisaya</p>
 
-                    <h3>Education</h3>
+                    <h3><b>Education</b></h3>
                     <p>Elementary: Layawan Elementary School</p>
                     <p>High School: Misamis Occidental National High School</p>
-                    <p>College: University of Scienceand Technology of Southern Philippines</p>
-                    <h3>Skills</h3>
-                    <p>HTML, CSS</p>
-                    <h3>Work Experience</h3>
+                    <p>College: University of Science and Technology of Southern Philippines</p>
+                    <h3><b>Skills</b></h3>
+                    <p>HTML</p>
+                    <p>CSS</p>
+                    <p>Python</p>
+                    <p>Photography</p>
+                    <p>Video Editing</p>
+                    <p>Cooking</p>
+
+                    <h3><b>Work Experience</b></h3>
                     <p>Special Program for Employment of Students (SPES)</p>
                 </div>
             </div>
@@ -54,13 +63,16 @@
         <div class="col-md-6">
             <div class="card profile-card">
                 <div class="profile-picture">
-                    <img src="7711c34a-0c45-4a13-902a-ed76e6d54c10.jpg" alt="Profile Picture">
+                    <img src="Arlyn.jpg" alt="Profile Picture">
                 </div>
                 <div class="card-body">
-                    <h5>Arlyn Kaye Allona D. Baluyos</h5>
-                    <h3>About Me</h3>
-                    <p>I'm a 2nd year student at University of Science and Technology of Southern Phillipines pursuing a Degree in Information Technology.</p>
-                    <h3>Basic Information</h3>
+                    <h5><em>Arlyn Kaye Allona D. Baluyos</em></h5>
+
+                    <h3><b>About Me</b></h3>
+                    <p>I am a passionate and driven college student at University of Science and Technology of Southern Philippines currently pursuing a degree Information Technology. With strong curiosity for technology and problem-solving, I am actively learning and honing my skills in programming languages such as Python, Java, and HTML/CSS.
+                      I am excited to contribute to a dynamic team, learn from experienced professionals, and take on new challenges that will help me grow both personally and professionally.</p>
+
+                    <h3><b>Basic Information</b></h3>
                     <p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cake2-fill" viewBox="0 0 16 16">
                         <path d="m2.899.804.595-.792.598.79A.747.747 0 0 1 4 1.806v4.886q-.532-.09-1-.201V1.813a.747.747 0 0 1-.1-1.01ZM13 1.806v4.685a15 15 0 0 1-1 .201v-4.88a.747.747 0 0 1-.1-1.007l.595-.792.598.79A.746.746 0 0 1 13 1.806m-3 0a.746.746 0 0 0 .092-1.004l-.598-.79-.595.792A.747.747 0 0 0 9 1.813v5.17q.512-.02 1-.055zm-3 0v5.176q-.512-.018-1-.054V1.813a.747.747 0 0 1-.1-1.01l.595-.79.598.789A.747.747 0 0 1 7 1.806"/>
                         <path d="M4.5 6.988V4.226a23 23 0 0 1 1-.114V7.16c0 .131.101.24.232.25l.231.017q.498.037 1.02.055l.258.01a.25.25 0 0 0 .26-.25V4.003a29 29 0 0 1 1 0V7.24a.25.25 0 0 0 .258.25l.259-.009q.52-.018 1.019-.055l.231-.017a.25.25 0 0 0 .232-.25V4.112q.518.047 1 .114v2.762a.25.25 0 0 0 .292.246l.291-.049q.547-.091 1.033-.208l.192-.046a.25.25 0 0 0 .192-.243V4.621c.672.184 1.251.409 1.677.678.415.261.823.655.823 1.2V13.5c0 .546-.408.94-.823 1.201-.44.278-1.043.51-1.745.696-1.41.376-3.33.603-5.432.603s-4.022-.227-5.432-.603c-.702-.187-1.305-.418-1.745-.696C.408 14.44 0 14.046 0 13.5v-7c0-.546.408-.94.823-1.201.426-.269 1.005-.494 1.677-.678v2.067c0 .116.08.216.192.243l.192.046q.486.116 1.033.208l.292.05a.25.25 0 0 0 .291-.247M1 8.82v1.659a1.935 1.935 0 0 0 2.298.43.935.935 0 0 1 1.08.175l.348.349a2 2 0 0 0 2.615.185l.059-.044a1 1 0 0 1 1.2 0l.06.044a2 2 0 0 0 2.613-.185l.348-.348a.94.94 0 0 1 1.082-.175c.781.39 1.718.208 2.297-.426V8.833l-.68.907a.94.94 0 0 1-1.17.276 1.94 1.94 0 0 0-2.236.363l-.348.348a1 1 0 0 1-1.307.092l-.06-.044a2 2 0 0 0-2.399 0l-.06.044a1 1 0 0 1-1.306-.092l-.35-.35a1.935 1.935 0 0 0-2.233-.362.935.935 0 0 1-1.168-.277z"/>
@@ -78,13 +90,19 @@
                         <path d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286zm1.634-.736L5.5 3.956h-.049l-.679 2.022z"/>
                         <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm7.138 9.995q.289.451.63.846c-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6 6 0 0 1-.415-.492 2 2 0 0 1-.94.31"/>
                       </svg> English, Tagalog, Bisaya</p>
-                    <h3>Education</h3>
+
+                    <h3><b>Education</b></h3>
                     <p>Elementary: Estaca Integrated School</p>
                     <p>High School: Misamis Occidental National High School</p>
                     <p>College: University of Science and Technology of Southern Philippines</p>
-                    <h3>Skills</h3>
-                    <p>HTML, CSS</p>
-                    <h3>Work Experience</h3>
+
+                    <h3><b>Skills</b></h3>
+                    <p>HTML</p>
+                    <p>CSS</p>
+                    <p>Video Editing</p>
+                    <p>Photography</p>
+                    
+                    <h3><b>Work Experience</b></h3>
                     <p>Computer System Servicing NCII</p>
                 </div>
             </div>
